<resources>
    <string name="app_name">KotlinDemo</string>

    <string name="network_error">网络错误</string>
    <string name="error_view_tip">点击屏幕重试</string>
    <string name="json_data_error">数据解析异常</string>
    <string name="network_connect_error">网络连接异常</string>
    <string name="network_connect_timeout">网络连接超时</string>
    <string name="no_route_to_host">无法连接到服务器</string>
    <string name="unknown_error">未知错误</string>

    <string name="not_open_yet">暂未开发</string>
    <string name="str_ganhuo">干货</string>
    <string name="str_meizi">妹子</string>
    <string name="detail">详情</string>
    <string name="str_verification">验证码</string>
    <string name="str_clear">清除</string>
    <string name="str_input_complete">输入完成</string>
    <string name="waiting_tips">请稍后…</string>
    <string name="str_verification_code">验证码</string>
    <string name="str_verification_in_progress">验证中</string>
    <string name="str_toast">Toast</string>
    <string name="str_time_format">yyyy-MM-dd</string>
    <string name="str_already_read">已读</string>
    <string name="str_not_read">未读</string>
    <string name="str_article">文章</string>
    <string name="str_main">首页</string>
    <string name="str_mine">我的</string>
    <string name="str_back_double_press">再按一次退出</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="user_name_and_pwd_can_not_be_empty">用户名或密码不能为空</string>
    <string name="login_failed_check">登录失败，请检查用户名或密码</string>
    <string name="login_success">登录成功</string>
    <string name="jump">跳过</string>
    <string name="data_store">DataStore</string>
    <string name="write">写入</string>
    <string name="read">读取</string>
    <string name="room">Room</string>
    <string name="user_age">年龄</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="update">更新当前</string>
    <string name="user_not_exist">此人不存在</string>
    <string name="share">分享</string>
    <string name="str_qq">QQ</string>
    <string name="str_wechat">微信</string>
    <string name="str_weibo">微博</string>
    <string name="str_qqzone">QQ空间</string>
    <string name="str_moments">朋友圈</string>
    <string name="str_more">更多</string>
    <string name="cancel">取消</string>
    <string name="your_phone_does_not_install_qq">您的手机还没有安装QQ</string>
    <string name="your_phone_does_not_install_wechat">您的手机还没有安装微信</string>
    <string name="your_phone_does_not_install_weibo">您的手机还没有安装微博</string>
    <string name="your_phone_does_not_install_qq_zone">您的手机还没有安装QQ空间</string>
    <string name="share_unknown_error">分享出现未知异常</string>
    <string name="share_to">分享到</string>
    <string name="str_like">喜欢</string>
    <string name="str_comments">评论</string>
    <string name="str_collection">收藏</string>
    <string name="str_add">add</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="str_bottom_nav_view">BottomNavigationView</string>
    <string name="str_test_bottom_navigation_view">测试 BottomNavigationView</string>
</resources>