<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".ui.activity.picture.PictureActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:clipChildren="false"
        android:transitionName="meizi"
        android:layout_marginStart="@dimen/dimen_05dp"
        android:layout_marginEnd="@dimen/dimen_05dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPosition" />

    <com.zhpan.indicator.IndicatorView
        android:id="@+id/indicator"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager" />

    <ImageView
        android:id="@+id/ivArrowClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:src="@mipmap/arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/tvPosition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/tvPosition"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1/2" />

    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:src="@mipmap/ic_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/str_like" />

    <ImageView
        android:id="@+id/ivCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:src="@mipmap/ic_collection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivLike"
        android:contentDescription="@string/str_collection" />

    <ImageView
        android:id="@+id/ivMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:src="@mipmap/ic_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCollection"
        android:contentDescription="@string/str_comments" />


    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:src="@mipmap/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/share" />
</androidx.constraintlayout.widget.ConstraintLayout>