<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ListActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.scwang.smart.refresh.header.MaterialHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

        <include layout="@layout/layout_loading" />

        <include layout="@layout/layout_view_stub_holder" />
    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_article"
            app:layout_constraintBottom_toTopOf="@+id/btnGanHuo"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnGanHuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ganhuo"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnMeizi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_meizi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_verfication"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnMeizi"
            app:layout_constraintStart_toEndOf="@+id/btnGanHuo"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>